@@ -115,7 +115,7 @@ sys-fs/squash_dir:unionfs-fuse - Prefer unionfs-fuse
 sys-fs/squashfs-tools:lz4 - Enable support for LZ4 compression using app-arch/lz4
 sys-fs/squashfs-tools:xz - Enable support for XZ ("LZMA2") compression using app-arch/xz-utils
 sys-process/systemd-cron:cron-boot - Enable systemd boot cron target
-sys-process/systemd-cron:etc-crontab - Use /etc/crontab; disable this when you have the sys-process/dcron default file here
+sys-process/systemd-cron:etc-crontab-systemd - Use /etc/crontab-systemd instead of /etc/crontab to avoid format conflict with sys-process/dcron
 sys-process/systemd-cron:minutely - Enable systemd minutely cron target
 sys-process/systemd-cron:setgid - Install a cron setgid helper to allow users editing crontabs
 sys-process/systemd-cron:yearly - Enable systemd yearly/semi-annually/quarterly cron target
