@@ -15,7 +15,7 @@
 	</upstream>
 	<use>
 		<flag name="cron-boot">Enable systemd boot cron target</flag>
-		<flag name="etc-crontab">Use /etc/crontab; disable this when you have the sys-process/dcron default file here</flag>
+		<flag name="etc-crontab-systemd">Use /etc/crontab-systemd instead of /etc/crontab to avoid format conflict with sys-process/dcron</flag>
 		<flag name="setgid">Install a cron setgid helper to allow users editing crontabs</flag>
 		<flag name="minutely">Enable systemd minutely cron target</flag>
 		<flag name="yearly">Enable systemd yearly/semi-annually/quarterly cron target</flag>
